# personal-aid

./: .gitignore  PLAN.md  PROJECT_PLAN.md  REQUIREMENTS.md  build.bat  index.html  package-lock.json  package.json
backend/: pyproject.toml  run.py
backend/src/personal_aid/: health.py  main.py
backend/tests/: conftest.py  test_health.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
